@@ -5,7 +5,6 @@ AM_CPPFLAGS = \
 -I$(top_srcdir) \
 -I$(top_srcdir)/bin \
 -I$(top_srcdir)/src/lib \
--I$(top_srcdir)/src/lib/dlfcn \
 @win32_cppflags@
 
 AM_CFLAGS = @win32_cflags@
@@ -46,7 +45,7 @@ evil_suite_SOURCES +=  memcpy_glibc_arm.S
 
 endif
 
-evil_suite_LDADD = $(top_builddir)/src/lib/dlfcn/libdl.la $(top_builddir)/src/lib/libevil.la -lm
+evil_suite_LDADD = $(top_builddir)/src/lib/libdl.la $(top_builddir)/src/lib/libevil.la -lm
 evil_suite_LDFLAGS = -Wl,--enable-auto-import
 
 test_evil_SOURCES = test_evil.c
